# online_training

./: .env.example  fixture_groups.json  pyproject.toml  users_payments_fixture.json
config/: settings.py  urls.py
materials/: models.py  permissions.py  serializers.py  urls.py  views.py
materials/migrations/: 0001_initial.py  0002_remove_courses_lessons_lessons_courses.py  0003_alter_lessons_courses.py  0004_courses_owner_lessons_owner.py
users/: models.py  serializers.py  urls.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_alter_payments_payment_method.py
